--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "lit": "^3.2.1"
+    "lit": "^3.2.1",
+    "pocketbase": "^0.22.1"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
