[Feat]: finished 컴포넌트 생성 - featue/writeQna 브랜치에 finished 컴포넌트 만들었습니다. - 제목 입력란 id 'signUp/number'에서 'qnaTitle'로 변경했습니다.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,12 @@
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": "error", // Prettier 규칙을 ESLint 규칙으로 적용
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ], // Prettier 규칙을 ESLint 규칙으로 적용
     "no-console": "warn" // console 사용에 대한 경고
   }
 }
