--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "lit": "^3.2.1",
-    "pocketbase": "^0.22.1"
+    "pocketbase": "^0.22.1",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
